fix page width on mobile

--- a/app/src/app/pages/media/media-list-page/media-list-page.component.css
+++ b/app/src/app/pages/media/media-list-page/media-list-page.component.css
@@ -28,6 +28,12 @@ table {
   font-weight: bold;
 }
 
+.mat-column-url {
+  width: min-content;
+  text-align: center;
+  font-weight: bold;
+}
+
 @media screen and (max-width: 670px) {
   .table-filters {
     display: flex;
